--- a/app/templates/app/new_pelicula.html
+++ b/app/templates/app/new_pelicula.html
@@ -7,8 +7,13 @@
 <h1>Insertar una pelicula</h1>
 <form method="post">
     {% csrf_token %}
-    {{ form }}
+    <table>
+        {{ form.as_table }}
+    </table>
     <input type="submit" value="Insertar Pelicula">
+    {% if error  %}
+    <p style="color: red;">Una pelicula con esos datos ya existe</p>
+    {% endif %}<br />
 </form>
 
 {% endblock %}
